k8s/05-linkerd-viz-ingress/ngrok-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: linkerd-viz
  name: linkerd-viz
  annotations:
    k8s.ngrok.com/modules: linkerd-viz
spec:
  ingressClassName: ngrok
  rules:
  - host: stacks-shub-linkderd.ngrok.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
